corpus/comments.txt
===
Line comments
===
// hello world
---
(source_file
  (line_comment))

===
Block comment, one line
===
/* hello world */
---
(source_file
  (block_comment))

===
Block comment, multiline
===
/*
 * hello world
 */
---
(source_file
  (block_comment))

===
Block comments, nested
===
/* foo /* bar */ baz */
---
(source_file
  (block_comment
    (block_comment)))

===
Block comment, nested line comment
===
/*
 * // hello world
 */
---
(source_file
  (block_comment
    (line_comment)))

===
Block comment, open ended
===
/*
---
(source_file
  (block_comment
    (eof)))

===
Block comment, open ended nested
===
/* /* */ /*
---
(source_file
  (block_comment
    (block_comment)
    (block_comment
      (eof))
    (eof)))
