corpus/text.txt
================================================================================
Lorem Ipsum
================================================================================
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
incididunt ut labore et dolore magna aliqua. Nulla porttitor massa id neque
aliquam. Morbi tristique senectus et netus et malesuada. Ultricies leo integer
malesuada nunc vel risus commodo. Feugiat scelerisque varius morbi enim nunc
faucibus a pellentesque sit.
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (space)
    (text)
    (space)
    (text)
    (space)
    (text)
    (space)
    (text)))

================================================================================
Special characters
================================================================================
A/B-Testing. -5.5 is a number. Want to see me @5?. Semicolon; .-. ..
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (space)
    (text)
    (space)
    (text)
    (space)
    (text)
    (space)
    (text)))

================================================================================
Special characters, which are sometimes converted to text
================================================================================
foo[] == - + / bar
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (text)
    (text)
    (space)
    (text)
    (space)
    (text)
    (space)
    (text)
    (space)
    (text)))

================================================================================
Escape character
================================================================================
\#
--------------------------------------------------------------------------------

(source_file
  (markup
    (escape)))

================================================================================
Unicode Escape
================================================================================
\u{FEFF} \u{200b}
--------------------------------------------------------------------------------

(source_file
  (markup
    (escape)
    (space)
    (escape)))

================================================================================
Incomplete Unicode Escape
================================================================================
\u{
--------------------------------------------------------------------------------

(source_file
  (markup
    (escape))
  (ERROR))

================================================================================
Shorthands
================================================================================
... --- -- -? ~
--------------------------------------------------------------------------------

(source_file
  (markup
    (text_shorthand)
    (space)
    (text_shorthand)
    (space)
    (text_shorthand)
    (space)
    (text_shorthand)
    (space)
    (text_shorthand)))

================================================================================
SmartQuote, single
================================================================================
'Hello World'
--------------------------------------------------------------------------------

(source_file
  (markup
    (smart_quote)
    (text)
    (smart_quote)))

================================================================================
SmartQuote, double
================================================================================
"Hello World"
--------------------------------------------------------------------------------

(source_file
  (markup
    (smart_quote)
    (text)
    (smart_quote)))

================================================================================
Raw, empty
================================================================================
``
--------------------------------------------------------------------------------

(source_file
  (markup
    (raw)))

================================================================================
Raw, single tick
================================================================================
`hello /* embedded not-comment */ world`
--------------------------------------------------------------------------------

(source_file
  (markup
    (raw)))

================================================================================
Raw, two ticks (not an actual raw)
================================================================================
``test``
--------------------------------------------------------------------------------

(source_file
  (markup
    (raw)
    (text)
    (raw)))

================================================================================
Raw, three ticks
================================================================================
```hello #~!*, 

https://test.com ``


world```
--------------------------------------------------------------------------------

(source_file
  (markup
    (raw)))

================================================================================
Raw, unclosed
================================================================================
```
--------------------------------------------------------------------------------

(source_file
  (ERROR)
  (markup
    (raw)))

================================================================================
Link, http
================================================================================
http://example.com/
--------------------------------------------------------------------------------

(source_file
  (markup
    (link)))

================================================================================
Link, https
================================================================================
https://www.youtube.com/watch?v=dQw4w9WgXcQ
--------------------------------------------------------------------------------

(source_file
  (markup
    (link)))

================================================================================
Link, all the special characters
================================================================================
https://!$%&*+,-./:;=?@_~'#
--------------------------------------------------------------------------------

(source_file
  (markup
    (link)))

================================================================================
Link, trailing dot
================================================================================
Hey, check out https://example.com/.
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (link)
    (text)))

================================================================================
Link, two trailing dots
================================================================================
Hey, check out https://example.com/..
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (link)
    (text)))

================================================================================
Link, two trailing dots
================================================================================
Hey, check out https://example.com/..
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (link)
    (text)))

================================================================================
Link, three trailing dots
================================================================================
Hey, check out https://example.com/...
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (link)
    (text_shorthand)))

================================================================================
Link, exclamation mark, then shorthand
================================================================================
Hey, check out https://example.com/!...
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (link)
    (text)
    (text_shorthand)))

================================================================================
Link, nested brackets
================================================================================
https://[bar[no]]yes[quux]/(baz(yes))(foo)
--------------------------------------------------------------------------------

(source_file
  (markup
    (link)))

================================================================================
Link, unclosed brackets
================================================================================
https://[bar
--------------------------------------------------------------------------------

(source_file
  (markup
    (link
      (ERROR))))

================================================================================
Link, unopened brackets
================================================================================
https://bar]
--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
Link, badly paired brackets [)
================================================================================
https://[bar)
--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
Link, badly paired brackets (]
================================================================================
https://(bar]
--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
Link, but not http(s)
================================================================================
ftp://example.com
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (text)
    (line_comment)))

================================================================================
Strong
================================================================================
Plain *Strong* Plain
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (space)
    (strong
      (markup
        (text)))
    (space)
    (text)))

================================================================================
Emphasis
================================================================================
Plain _Emph_ Plain
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (space)
    (emph
      (markup
        (text)))
    (space)
    (text)))

================================================================================
Strong emphasis
================================================================================
Plain *Strong _Strong Emph_ Strong* Plain
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (space)
    (strong
      (markup
        (text)
        (space)
        (emph
          (markup
            (text)))
        (space)
        (text)))
    (space)
    (text)))

================================================================================
Emphasized strength
================================================================================
Plain _Emphasis *Emphasis Strong* Emphasis_ Plain
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (space)
    (emph
      (markup
        (text)
        (space)
        (strong
          (markup
            (text)))
        (space)
        (text)))
    (space)
    (text)))

================================================================================
Strong emphasis with extra strength inside
================================================================================
*_*Super Strong*_*
--------------------------------------------------------------------------------

(source_file
  (markup
    (strong
      (markup
        (emph
          (markup
            (strong
              (markup
                (text)))))))))

================================================================================
Emphasized strength with extra emphasis inside
================================================================================
_*_Super emphasized_*_
--------------------------------------------------------------------------------

(source_file
  (markup
    (emph
      (markup
        (strong
          (markup
            (emph
              (markup
                (text)))))))))

================================================================================
Stars in word
================================================================================
Very*long*word
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (text)
    (text)
    (text)
    (text)))

================================================================================
Stars next to words
================================================================================
stars*next to* words*
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (text)
    (text)
    (strong
      (markup
        (space)
        (text)))))

================================================================================
Underscores in word
================================================================================
Very_long_word
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (text)
    (text)
    (text)
    (text)))

================================================================================
Strong with parbreak
================================================================================
*X

Y*
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (text)
    (parbreak)
    (text)))

================================================================================
Strong with linebreak
================================================================================
*X
Y*
--------------------------------------------------------------------------------

(source_file
  (markup
    (strong
      (markup
        (text)
        (space)
        (text)))))

================================================================================
Emphasis with parbreak
================================================================================
_X

Y_
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (text)
    (parbreak)
    (text)))

================================================================================
Emphasis with linebreak
================================================================================
_X
Y_
--------------------------------------------------------------------------------

(source_file
  (markup
    (emph
      (markup
        (text)
        (space)
        (text)))))
