corpus/whitespace.txt
================================================================================
One newline
================================================================================


--------------------------------------------------------------------------------

(source_file
  (markup
    (space)))

================================================================================
Parbreak
================================================================================
paragraph

paragraph
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (parbreak)
    (text)))

================================================================================
Text with spaces
================================================================================
foo bar baz
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)))
